--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
       <h3><p>Computer Science Major</p></h3>
       <p>Hey. I am thrilled to connect with fellow enthusiasts, mentors, and anyone who shares a love for technology. Whether you're here to explore my projects, share ideas, or just have a friendly conversation, feel free to connect with me!
         B.Tech degree holder with a strong academic background and a passion for engineering.
-       Proficient in key engineering concepts and technologies, with hands-on experience gained through internships and projects.
-     Seeking an entry-level engineering position to apply my knowledge, problem-solving skills, and enthusiasm for contributing to innovative projects.</p>
+       Proficient in key engineering concepts and technologies, with hands-on experience gained through projects.
+     Seeking an entry-level engineering position to apply my knowledge, problem-solving skills, and enthusiasm for contributing to innovative projects.
+     Other than Computer science and Engineering, I'm captivated by psychology's depth, exploring cognitive processes and behavioral patterns to comprehend motivations and societal dynamics.
+    My hobbies include Reading, Volunteering and contributing to communities through mentorship and  have a passion for music. </p>
     </div>
   </header>
 
