--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <nav class="w3-sidebar w3-collapse w3-animate-left" style="z-index:3;width:300px; background-color: #d05858;" id="mySidebar">
   <div class="w3-container">
     
-    <img src="C:\Users\Sneha\OneDrive\Pictures\Screenshots\Screenshot 2023-11-07 154132.png" style="width:45%;" class="w3-round"><br><br>
+    <img src="Screenshot 2023-11-07 154132.png" style="width:45%;" class="w3-round"><br><br>
     <h4><b>STUDENT PORTFOLIO</b></h4>
   </div>
   <div class="w3-bar-block">
